--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </div>
   
     <div id="map" class="mapContainer"></div>
+
+    <div id="foursquareContainer" class="foursquareContainer"></div>
     
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC5OTKPt9XEwXBNmatSH2lUp8I0kr6_tg"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
