--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
     </header>
 
     <div class="listContainer">       
-        <ul data-bind="foreach: filteredMarkers">
-              <li data-bind="click: $parent.focusMarker"><span data-bind="text: name"></span></li>
+        <ul data-bind="foreach: filteredLocations">
+              <li data-bind="click: $parent.focusLocation"><span data-bind="text: name"></span></li>
         </ul>
+
+        <div id="recomendations" class="recomendationsContainer">
+          <ul id="listRecomendations">
+          </ul>   
+        </div>
     </div>
   
-    <div id="map" class="mapContainer"></div>
-
-    <div id="foursquareContainer" class="foursquareContainer"></div>
+    <div id="map" class="mapContainer"></div>  
     
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC5OTKPt9XEwXBNmatSH2lUp8I0kr6_tg"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
