--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
     	<title>Neighborhood Project</title>      
-    	<link rel="stylesheet" href="css/style.css">
+    	<link rel="stylesheet" href="css/min/style.min.css">
   </head>
 
   <body>
@@ -32,6 +32,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC5OTKPt9XEwXBNmatSH2lUp8I0kr6_tg"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/lib/jquery.min.js"></script>
-    <script src="js/app.js"></script>    
+    <script src="js/min/app.min.js"></script>    
   </body>
 </html>
