map async, more fixes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
       <div id="map" class="mapContainer"></div>
       <div id="pano" class="pano"></div>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC5OTKPt9XEwXBNmatSH2lUp8I0kr6_tg"></script>
+      <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC5OTKPt9XEwXBNmatSH2lUp8I0kr6_tg&callback=initMap" onerror="errorMap()"></script>
       <script src="js/lib/knockout-3.2.0.js"></script>
       <script src="js/lib/jquery.min.js"></script>
       <script src="js/min/app.min.js"></script>    
